# small_projects

./: CMakeLists.txt  Makefile  README.md  camera.c  camera.h  serial_com.c  serial_com.h  server.c
include/: camera.h  serial_com.h
src/: convert.c  main.c
